--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -1,19 +1,25 @@
 <nav class="navbar navbar-default" role="navigation">
     <div class="container-fluid">
       <!--brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">  
+      <div class="navbar-header">
         <a class="navbar-brand" href="/">rails 102</a>
     </div>
 
     <!-- collect the nav links, forms, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
-            <li>
-                <%= link_to("登录", '#') %>
-            <li>
-        </ul>
-      </div>
-      <!-- /.navbar-collapse -->
-    </div>
-    <!-- /.container-fluid -->
-</nav>
+            <% if !current_user %>
+              <li><%= link_to("注册", new_user_registration_path) %> </li>
+              <li><%= link_to("登陆", new_user_session_path) %></li>
+            <% else %>
+              <li class="dropdown">
+                <a href='#' class="dropdown-toggle" data-toggle="dropdown">
+                  Hi!, <% current_user.email %>
+                  <b class="caret"></b>
+              </a>
+              <rl class="dropdown-menu">
+                  <li> <%= link_to("退出", destroy_user_session_path, method: :delete) %> </l
+
+              </ul>
+            </li>
+          <% end %>
